
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static inline char *copy_advance(char *dst, const char *src)
{
 while (*src)
  *dst++ = *src++;
 return dst;
}
